force-app/main/default/objects/SalesAccountSummary__c/SalesAccountSummary__c.object-meta.xml
<CustomObject>
    <label>매출합계(고객별)</label>
    <nameField>
        <label>SalesAccountSummary 이름</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>