force-app/main/default/objects/SalesAccountSummary__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>SalesSummary</relationshipName>
    <type>Lookup</type>
</CustomField>