force-app/main/default/objects/SalesAccountSummary__c/fields/BRC_ID__c.field-meta.xml
<CustomField>
    <fullName>BRC_ID__c</fullName>
    <externalId>true</externalId>
    <label>BRC_ID</label>
    <length>3</length>
    <type>Text</type>
</CustomField>