force-app/main/default/objects/SalesAccountSummary__c/fields/DIV_ID__c.field-meta.xml
<CustomField>
    <fullName>DIV_ID__c</fullName>
    <externalId>true</externalId>
    <label>DIV_ID</label>
    <length>4</length>
    <type>Text</type>
</CustomField>