force-app/main/default/objects/SalesAccountSummary__c/fields/ExtId__c.field-meta.xml
<CustomField>
    <fullName>ExtId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>&quot;날짜&quot;+&quot;_&quot;+&quot;고객번호&quot;</description>
    <externalId>true</externalId>
    <label>ExtId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>