force-app/main/default/objects/SalesAccountSummary__c/fields/TotalSalesProfit__c.field-meta.xml
<CustomField>
    <fullName>TotalSalesProfit__c</fullName>
    <description>총 매출이익</description>
    <label>TotalSalesProfit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>